--- a/main.css
+++ b/main.css
@@ -75,17 +75,17 @@ footer {
     }
 
     .nav-links.close{
-        position: fixed;
-        height: 100%;
-        width: 100%;
+        position: absolute;
         top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         text-align: center;
         background-color: rgb(37,37,37);
         display: flex;
         flex-direction: column;
         align-items: center;
         transform: translatey(6%);
-        left: 0;
     }
 
     .nav-links {
