--- a/main.css
+++ b/main.css
@@ -75,7 +75,7 @@ footer {
     }
 
     .nav-links.close{
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
