--- a/main.css
+++ b/main.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    height: 100%;
+}
+
 nav {
     color: white;
     display: flex;
@@ -52,7 +56,7 @@ nav {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     text-align: center;
     width: 100%;
