--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ nav {
     font-family: 'Poppins', sans-serif;
     width: 100%;
     border-bottom: 2px solid greenyellow;
+    position: absolute;
 }
 
 .logo {
