--- a/main.css
+++ b/main.css
@@ -28,6 +28,16 @@ nav {
     font-size: 20px;
 }
 
+.logo a{
+    color: white;
+    text-decoration: none;
+}
+
+.logo a:hover {
+    color: greenyellow;
+}
+
+
 .nav-links {
     display: flex;
     justify-content: space-around;
@@ -107,6 +117,7 @@ footer {
 
     nav.close {
         height: 100%;
+        position: absolute;
     }
 
     .menu {
