--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@ body {
 }
 
 nav {
+    overflow: hidden;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -62,6 +63,10 @@ nav {
     font-size: 14px;
 }
 
+.nav-links_m {
+    display: none;
+}
+
 .menu {
     display: none;
 }
@@ -69,13 +74,21 @@ nav {
 footer {
     position: fixed;
     bottom: 0;
-    text-align: center;
+    margin: auto;
+    padding: 5px;
     width: 100%;
     background-color: rgb(37,37,37);
-    color: white;
     border-top: 2px solid greenyellow;
+    text-align: center;
+    color: white;
 }
 
+p {
+    color: red;
+    position: relative;
+    top: 100px;
+    text-align: center;
+}
 
 @media screen and (max-width:1024px){
     .nav-links {
@@ -85,39 +98,28 @@ footer {
 }
 
 @media screen and (max-width:768px){
-    body {
-        overflow-y: hidden;
-    }
-
-    .nav-links.close{
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        background-color: rgb(37,37,37);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        transform: translatey(6%);
-    }
-
     .nav-links {
         display: none;
     }
 
-    .nav-links li {
-        opacity: 100%;
-    }
-
-    .nav-links li :hover {
-        color: greenyellow;
-    }
-
-    nav.close {
+    .nav-links_m.close {
+        position: fixed;
+        top: 6vh;
         height: 100%;
-        position: absolute;
+        width: 100%;
+        background-color: rgb(37,37,37);
+        text-align: center;
+        display: inline-block;
+    }
+
+    .nav-links_m li {
+        list-style: none;
+        padding: 100px;
+    }
+
+    .nav-links_m li a {
+        color: white;
+        text-decoration: none;
     }
 
     .menu {
@@ -156,6 +158,10 @@ footer {
         height: 2px;
         background-color: white;
         margin: 3px;
+    }
+
+    .main-content.close {
+        display: none;
     }
 
 }
