--- a/main.css
+++ b/main.css
@@ -73,10 +73,11 @@ nav {
 
 footer {
     position: fixed;
-    bottom: 0;
+    bottom: -25%;
     margin: auto;
     padding: 5px;
     width: 100%;
+    height: 30%;
     background-color: rgb(37,37,37);
     border-top: 2px solid greenyellow;
     text-align: center;
@@ -114,7 +115,7 @@ p {
 
     .nav-links_m li {
         list-style: none;
-        padding: 130px;
+        padding: 120px;
     }
 
     .nav-links_m li a {
