--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ nav {
     font-family: 'Poppins', sans-serif;
     width: 100%;
     border-bottom: 2px solid greenyellow;
-    position: absolute;
+    position: fixed;
 }
 
 .logo {
@@ -73,7 +73,7 @@ nav {
 
 footer {
     position: fixed;
-    bottom: -25%;
+    bottom: -27%;
     margin: auto;
     padding: 5px;
     width: 100%;
