--- a/main.css
+++ b/main.css
@@ -8,6 +8,11 @@ body {
     height: 100%;
 }
 
+header {
+    overflow: hidden;
+    position: -webkit-sticky;
+}
+
 nav {
     overflow: auto;
     color: white;
