--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,16 @@ h1 {
 
 h4 {
     color: white;
-    margin-left: 20px;
     float: left;
-    padding: 0 50px;
+    padding: 0;
+    margin-left: 100px;
     text-transform: uppercase;
-    letter-spacing: 4px;
+    letter-spacing: 3px;
+}
+
+h4 a {
+    text-decoration: none;
+    color: white;
 }
 
 footer {
@@ -24,7 +29,7 @@ footer {
     background-color: rgba(37,37,37);
     color: white;
     padding: 15px;
-    border-top: 2px solid greenyellow;
+    border-top: 1px solid greenyellow;
 }
 
 section {
@@ -37,30 +42,44 @@ section {
     padding: 0;
 }
 
-section.sec1 {
+section.home_p_sec1 {
     background: url(../img/bg_img_001.jpg);
     width: 100%;
     height: 170px;
 }
 
-section.sec2 h2 {
+section.Game_p_sec1 {
+    background: url(../img/bg_img_002.jpg);
+    width: 100%;
+    height: 190px;
+    background-position: center;
+}
+
+section.Game_p_sec1 h1 {
+    color: white;
+    padding: 80px;
+}
+
+section.home_p_sec2 h2 {
     color: black;
 }
 
 nav {
     width: 100%;
-    height: 60px;
+    height: 70px;
     background: rgba(37,37,37);
     border-bottom: 2px solid greenyellow;
     position: sticky;
     top: 0;
+    margin: 0;
 }
 
 nav .n_c ul {
     display: flex;
-    margin: 20px;
-    padding: 0 100px;
+    margin: 0;
+    padding: 25px;
     float: right;
+    font-size: 12px;
 }
 
 nav .n_c ul li {
@@ -76,39 +95,113 @@ nav .n_c ul li a {
     font-weight: bold;
 }
 
+nav .n_c ul li a:hover{
+    color: greenyellow;
+}
+
 .menu {
     display: none;
 }
 
-@media screen and (max-width:1079px){
-    nav .n_c ul {
-        margin: 20px;
-        padding: 0;
+.s_list {
+    display: flex;
+}
+
+.csgo {
+    background-color: rgba(37,37,37);
+    width: 50%;
+    text-align: center;
+}
+
+.csgo ul {
+    background-color: rgba(82,82,82);
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.csgo li a{
+    display: block;
+    color: white;
+    text-decoration: none;
+    padding: 40px;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    max-height: 40px;
+}
+
+.wf {
+    background-color: rgba(37,37,37);
+    width: 50%;
+    text-align: center;
+}
+
+.wf ul {
+    background-color: rgba(82,82,82);
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: none;
+}
+
+.wf li a{
+    display: block;
+    color: white;
+    text-decoration: none;
+    padding: 40px;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
+    max-height: 40px;
+}
+
+.csgo h3, .wf h3 {
+    text-transform: uppercase;
+    color: white;
+}
+
+
+@media screen and (max-width:1048px){
+    h4 {
+        margin-left: 50px;
     }
 }
 
-@media screen and (max-width:768px){
+@media screen and (max-width:987px){
     nav .n_c ul {
         display: none;
+    }
+
+    h4 {
+        margin-left: 50px;
+    }
+
+    nav {
+        height: 60px;
     }
 
     nav .n_c.close ul {
         display: inline-block;
         width: 100%;
-        height: 100%;
-        margin: auto;
+        height: 91vh;
+        margin: 0;
+        padding: 0;
+        margin-top: 6px;
         background-color: rgba(37,37,37);
         text-align: center;
         position: static;
+        border-bottom: 2px solid greenyellow;
     }
     
     nav .n_c.close ul li {
         list-style: none;
-        padding: 100px;
+        text-align: center;
+        border-bottom: 1px solid white;
     }
     
     nav .n_c.close ul li a {
         color: white;
+        padding: 50px;
     }
 
     nav .n_c.close ul li a:hover {
@@ -130,18 +223,17 @@ nav .n_c ul li a {
 
     .menu.close .l1 {
         transform: rotate(45deg);
-        top: 26px;
-        padding: .2px;
+        top: 29px;
     }
 
     .menu.close .l2 {
         transform: rotate(-45deg);
-        top: 21px;
+        top: 24px;
     }
 
     .menu.close .l3 {
         transform: rotate(-45deg);
-        top: 16px;
+        top: 19px;
     }
 
     .menu div {
@@ -153,7 +245,7 @@ nav .n_c ul li a {
         top: 24px;
     }
 
-    .sec1.close, .sec2.close, .sec3.close {
+    #content_s_1.close,#content_s_2.close,#content_s_3.close {
         display: none;
     }
 }
