--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,7 @@ nav .n_c ul li a:hover{
         text-align: center;
         position: static;
         border-bottom: 2px solid greenyellow;
+        overflow: hidden;
     }
     
     nav .n_c.close ul li {
