--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ section.home_p_sec2 h2 {
 
 nav {
     width: 100%;
-    height: 70px;
+    height: 6vh;
     background: rgba(37,37,37);
     border-bottom: 2px solid greenyellow;
     position: sticky;
