--- a/css/style.css
+++ b/css/style.css
@@ -66,13 +66,14 @@ section.home_p_sec2 h2 {
 
 nav {
     width: 100%;
-    height: 6vh;
+    height: 60px;
     background: rgba(37,37,37);
     border-bottom: 2px solid greenyellow;
     position: sticky;
     top: 0;
     margin: 0;
     padding-top: 5px;
+    overflow: auto;
 }
 
 nav .n_c ul {
