--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
-    margin: 0;
+    margin: 0px;
     padding: 0;
     font-family: "Arial black";
+    /*overflow: hidden;*/
 }
 
 h1 {
@@ -73,7 +74,6 @@ nav {
     top: 0;
     margin: 0;
     padding-top: 5px;
-    overflow: auto;
 }
 
 nav .n_c ul {
