--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ nav {
     border-bottom: 2px solid greenyellow;
     position: sticky;
     top: 0;
-    margin: 0;
+    margin-bottom: 0;
     padding-top: 5px;
 }
 
