--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,8 @@ nav {
     border-bottom: 2px solid greenyellow;
     position: sticky;
     top: 0;
-    margin-bottom: 0;
+    margin-bottom: 0px;
+    margin-top: 0px;
     padding-top: 5px;
 }
 
