--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,16 @@ body {
 
 nav {
     width: 100%;
-    height: 10vh;
+    height: 4vh;
     background: rgba(37,37,37);
     position: sticky;
-    top: 0;
+    padding-top: 6vh;
+}
+
+footer {
+    text-align: center;
+    background-color: rgba(37,37,37);
+    color: white;
+    padding: 15px;
+    border-top: 1px solid greenyellow;
 }
