--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,160 @@
 body {
-    overflow: hidden;
+    overflow: auto;
     margin: 0;
     padding: 0;
     font-family: "Arial black";
 }
 
-nav {
+#nav {
+    overflow: hidden;
+    background-color: rgba(37,37,37);
+    top: 0;
+    transition: 0.6s;
+    justify-content: space-around;
+    padding: 10px;
+    border-bottom: 2px solid greenyellow;
+}
+
+#nav .n_c ul {
+    display: flex;
+    margin: 0;
+    padding: 25px;
+    float: right;
+    font-size: 12px;
+}
+
+#nav .n_c ul li {
+    list-style: none;
+}
+
+#nav .n_c ul li a {
+    display: block;
+    color: white;
+    padding: 0 60px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+#nav .n_c ul li a:hover, #nav h4 a:hover{
+    color: greenyellow;
+}
+
+#nav a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    margin: 0;
+}
+
+#nav h4 {
+    float: left;
+    text-transform: uppercase;
+    padding: 0;
+    letter-spacing: 3px;
+    margin-left: 100px;
+}
+
+section {
     width: 100%;
-    height: 4vh;
-    background: rgba(37,37,37);
-    position: sticky;
-    padding-top: 6vh;
+    height: 100vh;
+}
+
+section.home_p_sec1 {
+    background: url(../img/bg_img_001.jpg);
+    width: 100%;
+    height: 920px;
+}
+
+#nav, .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+section.Game_p_sec1 {
+    background: url(../img/bg_img_002.jpg);
+    width: 100%;
+    height: 437px;
+    background-position: center;
+}
+
+section.Game_p_sec1 h1 {
+    color: white;
+    padding-top: 220px;
+    text-align: center;
+}
+
+section.home_p_sec1 h1 {
+    padding-top: 300px;
+    text-align: center;
+    color: white;
+}
+
+section.home_p_sec2 h2 {
+    color: black;
+}
+
+.s_list {
+    display: flex;
+}
+
+.csgo {
+    background-color: rgba(37,37,37);
+    width: 50%;
+    text-align: center;
+}
+
+.csgo ul {
+    background-color: rgba(82,82,82);
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.csgo li a{
+    display: block;
+    color: white;
+    text-decoration: none;
+    padding: 40px;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    max-height: 40px;
+}
+
+.csgo h3, .wf h3 {
+    text-transform: uppercase;
+    color: white;
+}
+
+.wf {
+    background-color: rgba(37,37,37);
+    width: 50%;
+    text-align: center;
+}
+
+.wf ul {
+    background-color: rgba(82,82,82);
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: none;
+}
+
+.wf li a{
+    display: block;
+    color: white;
+    text-decoration: none;
+    padding: 40px;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
+    max-height: 40px;
+}
+
+.menu {
+    display: none;
 }
 
 footer {
@@ -18,5 +162,78 @@ footer {
     background-color: rgba(37,37,37);
     color: white;
     padding: 15px;
-    border-top: 1px solid greenyellow;
+    border: 1px solid greenyellow;
+}
+
+@media screen and (max-width:1048px){
+    #nav h4 {
+        margin-left: 50px;
+    }
+}
+
+@media screen and (max-width:768px){
+
+    #nav .n_c ul {
+        display: none;
+    }
+
+    #nav .n_c.close ul {
+        display: inline-block;
+        width: 100%;
+        height: 90vh;
+        margin: 10px;
+        padding: 0;
+    }
+
+    #nav .n_c.close ul li {
+        list-style: none;
+        text-align: center;
+        border-top: 1px solid greenyellow;
+    }
+
+    #nav .n_c.close ul li a {
+        color: white;
+        padding: 83px;
+    }
+
+    .menu {
+        display: block;
+    }
+
+    .line {
+        position: relative;
+        margin: auto;
+        height: 3px;
+        width: 100%;
+        border-radius: 15px;
+        transition: all cubic-bezier(0.25, 0.1, 0.28, 1.54) 0.32s;
+    }
+
+    .menu.close .l1 {
+        transform: rotate(45deg);
+        top: 29px;
+    }
+
+    .menu.close .l2 {
+        transform: rotate(-45deg);
+        top: 24px;
+    }
+
+    .menu.close .l3 {
+        transform: rotate(-45deg);
+        top: 19px;
+    }
+
+    .menu div {
+        width: 20px;
+        height: 2px;
+        background-color: white;
+        margin: 3px;
+        left: 80%;
+        top: 24px;
+    }
+
+    #content_s_1.close,#content_s_2.close,#content_s_3.close {
+        display: none;
+    }
 }
