--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Arial black";
-    background-color: rgba(37,37,37);
+    background-color: rgb(77, 77, 77);
 }
 
 html {
@@ -97,8 +97,8 @@ section.home_p_sec1 h1 {
     color: white;
 }
 
-section.home_p_sec2 h2 {
-    color: black;
+section.home_p_sec2 h2{
+    color: white;
 }
 
 .s_list {
