--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Arial black";
-    background-color: rgb(77, 77, 77);
+    background-color: rgb(37,37,37);
 }
 
 html {
@@ -64,6 +64,7 @@ html {
 section {
     width: 100%;
     height: 100vh;
+    background-color: white;
 }
 
 section.home_p_sec1 {
