--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,6 @@ body {
     background-color: rgb(37,37,37);
 }
 
-html {
-    min-height: 100vh;
-}
-
 #nav {
     overflow: hidden;
     background-color: rgba(37,37,37);
@@ -82,6 +78,7 @@ section.home_p_sec1 h1 {
     padding-top: 300px;
     text-align: center;
     color: white;
+    text-shadow: 2px 2px 2px black;
 }
 
 section.home_p_sec2 h2{
@@ -132,6 +129,10 @@ section.Game_p_sec1 h1 {
 .csgo h3, .wf h3 {
     text-transform: uppercase;
     color: white;
+}
+
+.csgo li a:hover, .wf li a:hover {
+    background-color: rgb(110, 110, 110);
 }
 
 .wf {
