--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@ body {
 }
 
 #nav h4 {
+    color: white;
     float: left;
     text-transform: uppercase;
     padding: 0;
@@ -62,6 +63,13 @@ body {
     width: 100%;
 }
 
+.date {
+    position: fixed;
+    left: 250px;
+    top: 30px;
+    color: white;
+}
+
 section {
     width: 100%;
     height: 100vh;
@@ -70,6 +78,9 @@ section {
 
 section.home_p_sec1 {
     background: url(../img/bg_img_001.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: center;
     width: 100%;
     height: 920px;
 }
@@ -86,7 +97,7 @@ section.home_p_sec2 h2{
 }
 
 section.Game_p_sec1 {
-    background: url(../img/bg_img_002.jpg);
+    background: url(../img/bg_img_003.jpg);
     width: 100%;
     height: 437px;
     background-position: center;
@@ -96,6 +107,7 @@ section.Game_p_sec1 h1 {
     color: white;
     padding-top: 220px;
     text-align: center;
+    text-shadow: 2px 2px 2px black;
 }
 
 .s_list {
@@ -200,6 +212,13 @@ footer {
         padding: 30px;
     }
 
+    .date {
+        position: fixed;
+        top: 36px;
+        left: 190px;
+        font-size: 10px;
+    }
+
     .menu {
         display: block;
     }
@@ -244,4 +263,13 @@ footer {
     #content_s_1.close,#content_s_2.close,#content_s_3.close {
         display: none;
     }
+
+    section.home_p_sec1 {
+        background: url(../img/bg_img_001.jpg);
+        background-repeat: no-repeat;
+        background-size: auto;
+        width: 100%;
+        height: 920px;
+    }
+    
 }
